Corrected some grammar and sense inaccuracies.

--- a/DS-T51;JC22100004300;Capstone-7;[Github].ipynb
+++ b/DS-T51;JC22100004300;Capstone-7;[Github].ipynb
@@ -319,7 +319,7 @@
    "id": "42974fae",
    "metadata": {},
    "source": [
-    "As with the numeric columns, the cities seem to be in the correct format and it looks like all fifty entries are unique. No oddities such as whitespace or garbled text is observed. However, the column refers to cities, whereas the entries refer to states. We quickly rename this before proceeding. can proceed."
+    "As with the numeric columns, the cities seem to be in the correct format and it looks like all fifty entries are unique. No oddities such as whitespace or garbled text is observed. However, the column refers to cities, whereas the entries refer to states. We can quickly rename this before proceeding."
    ]
   },
   {
@@ -734,7 +734,7 @@
    "id": "876cc5f7",
    "metadata": {},
    "source": [
-    "The analysis returns very mixed correlation across features, with medium correlation in both directions in PC1, mostly neutral for PC2 bar one strongly positive outlier, and even further mixed results in PC3."
+    "The analysis returns very mixed correlation across features, with medium correlation in both directions in PC1, mostly neutral for PC2 bar one strongly negative outlier, and even further mixed results in PC3."
    ]
   },
   {
@@ -1058,7 +1058,7 @@
    "id": "53491928",
    "metadata": {},
    "source": [
-    "The number of clusters providing the best accuracy seems to be four. The accuracy increases with the number of clusters provided to the model, but as dendrograms can be computationally expensive, it makes sense to keep this at a reasonably small value; one that straddles both performance and accuracy. While it doesn't make much of a difference in this dataset, for a larger one, it would be an important factor to consider."
+    "The number of clusters providing the best accuracy seems to be five. The accuracy increases with the number of clusters provided to the model, but as dendrograms can be computationally expensive, it makes sense to keep this at a reasonably small value; one that straddles both performance and accuracy. While it doesn't make much of a difference in this dataset, for a larger one, it would be an important factor to consider."
    ]
   },
   {
